# hello-world

./: .gitignore  HelloWorld.cs  Keyboard.ahk  README.md  ViestiAJKlle.txt  pelinLumoViimeinenTaisto.txt
Haskell/ConversionWeb/: Main.hs  cabal.sandbox.config  conversionWeb.cabal  conversionWeb.hs
Haskell/ConversionWeb/.cabal-sandbox/x86_64-windows-ghc-8.0.1-packages.conf.d/: aeson-0.11.3.0-AYyCVXH92MO53ABRgVjoPi.conf  ansi-terminal-0.6.2.3-5Hk29rBeW5z7lZTz0qhUuU.conf  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0.conf  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb.conf  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY.conf  blaze-builder-0.4.0.2-6Lw6V3wDhf3KDMasjNOEeG.conf  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9.conf  bytestring-builder-0.10.8.1.0-3Wvs19ArxK5AsrgrlbKbYR.conf  conduit-1.2.9-DZLKUQ9W5cSLiKBqdHp2dF.conf  conduit-extra-1.1.15-8e3FAV9OoQs2VlfYr9lJtc.conf  cookie-0.4.2.1-5P6dolSQSje7mJQ7M5DM5i.conf  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA.conf  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv.conf  easy-file-0.2.1-7vzbDevzFvQJn2BrZeISDk.conf  exceptions-0.8.3-5OTPYzRazb4DJ75sPncYEh.conf  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD.conf  fast-logger-2.4.10-6hl23RtxkGg7Dy4Z06OMuR.conf  http-date-0.0.6.1-94dgxFSkq0UFdECZ0voDtT.conf  http-types-0.9.1-513M7pGnrTGFw8O1wLzDf0.conf  http2-1.6.3-IxNjlFa9p5SE1SNpA2KG4C.conf  iproute-1.7.1-IQdN04AcR3aINlCiv3z3AS.conf  lifted-base-0.2.3.10-HcqZGdBYjtgLJKsMQed0lh.conf  mmorph-1.0.9-7Fxwo0Ga2nU9I92PguUETd.conf  monad-control-1.0.1.0-1xoC3YihUKYHLar1SsWtYe.conf  nats-1.1.1-BNyrdccFwtDCnPVRYXNFy6.conf  old-locale-1.0.0.7-6glXNhHF891B41ZfuI8hU8.conf  (+18 more)
(+2390 files in other folders)
