name:                webConversion
version:             0.0.1
synopsis:            My awesome todo-list app
homepage:            https://github.com/yourName/repoName
license:             MIT
author:              Esko Hanell
maintainer:          you@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable conwersionWeb
  main-is:             Main.hs
  -- other-modules:
  build-depends:       aeson (>=0.6.2.1 && <1.2), base (>=4.3.1 && <5), blaze-builder (>=0.3.3.0 && <0.5), bytestring (>=0.10.0.2 && <0.11), case-insensitive (>=1.0.0.1 && <1.3), data-default-class (>=0.0.1 && <0.2), fail, http-types (>=0.8.2 && <0.10), monad-control (>=1.0.0.3 && <1.1), mtl (>=2.1.2 && <2.3), nats (>=0.1 && <2), network (>=2.6.0.2 && <2.7), regex-compat (>=0.95.1 && <0.96), text (>=0.11.3.1 && <1.3), transformers (>=0.3.0.0 && <0.6), transformers-base (>=0.4.1 && <0.5), transformers-compat (>=0.4 && <0.6), wai (>=3.0.0 && <3.3), wai-extra (>=3.0.0 && <3.1), warp (>=3.0.0 && <3.3), scotty